testsuite/tests/typecheck/should_fail/T6022.stderr

T6022.hs:4:1: error:
    • Non type-variable argument in the constraint: Eq ([a] -> a)
    • When checking the inferred type
        f :: forall {a}. Eq ([a] -> a) => ([a] -> a) -> Bool
    Suggested fix: Perhaps you intended to use FlexibleContexts
